[project]
name = "layer-helper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.10",
    "pandas>=2.2.3",
    "pymupdf>=1.25.4",
    "pyside6>=6.8.2.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "pywin32>=310",
]
